Adding Bootstrap design

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,29 +1,31 @@
-<h1>Edit an Article</h1>
+<div class="d-flex align-items-center justify-content-center">
+    <h1>Edit your TODO List</h1>
+</div>
 <%= form_for :article,method: :put, url: article_update_path, locale: true do |f|  %>
-  
-    <div> 
+  <div class="container-sm">
+    <div class="mb-3">
         <% if @article.errors.any? %>
         <ul>
             <% @article.errors.full_messages.each do |message| %>
-                <li> <%= message %> </li>
+                <li class="text-danger"> <%= message %> </li>
             <% end %>
         </ul>
         <% end %>
     </div>
     <div>
-        <%= f.label :name %>
-        <%= f.text_field :name %>
+        <%= f.label :Title,for:"exampleFormControlInput1", class: "form-label" %>
+        <%= f.text_field :name, class: "form-control",id:"exampleFormControlInput1" %>
 
     </div>
 
     <div>
-        <%= f.label :body %>
-        <%= f.text_field :body %>
+        <%= f.label :Notes,for:"exampleFormControlTextarea1",class:"form-label" %>
+        <%= f.text_area :body,class:"form-control",id:"exampleFormControlTextarea1", rows:"3" %>
 
     </div>
 
     <div>
-    <%= f.submit %>
+    <%= f.submit class: "btn-primary"%>
 
     </div>
 
