--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,29 @@
-<table>
+<div class="d-flex align-items-center justify-content-center whole-body">
+
+<h1>TO DO LIST</h1> <%= link_to 'Add New', articles_new_path, class: "btn btn-primary" %>
+
+</div>
+<div class="d-flex container align-items-center justify-content-center">
+<div class = " col-sm-6  align-items-center text-center ">
+<table class="table">
     <thead>
     <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Body</th>
+      <%# <th>ID</th> %> 
+        <th scope="col">Title</th>
+        <th scope="col">Notes</th>
         </tr>
     </thead>
 <tbody>
 <% @articles.each do |article| %>
-<tr>
-    <td> <%= article.id %> </td>
+<tr class="table-primary">
+    <%#<td> <%= article.id %> <%#% </td>  %> 
     <td> <%= article.name %> </td>
     <td> <%= article.body %> </td>
     <td>
-        <%= link_to 'Edit', article_edit_path(article.id) %>
+        <%= link_to 'Edit', article_edit_path(article.id), class: "btn btn-primary" %>
     </td>
      <td>
-        <%= link_to 'Delete', article_delete_path(article.id),
+        <%= link_to 'Delete', article_delete_path(article.id),class: "btn btn-danger",
             method: :Delete, 
             data:{confirm: 'Are you sure to delete?'}
          %>
@@ -26,4 +33,5 @@
     <% end %>
 </tbody>
 </table>
-
+</div>
+</div>
