Adding Font Awesome Icons

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex align-items-center justify-content-center whole-body">
 
-<h1>TO DO LIST</h1> <%= link_to 'Add New', articles_new_path, class: "btn btn-primary" %>
+<h1>&nbsp;&nbsp; &nbsp;  TO DO LIST &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h1>  <%= link_to 'Add To Do', articles_new_path, class: "btn btn-primary far fa-plus-square" %>
 
 </div>
 <div class="d-flex container align-items-center justify-content-center">
@@ -15,15 +15,15 @@
     </thead>
 <tbody>
 <% @articles.each do |article| %>
-<tr class="table-primary">
+<tr class="table">
     <%#<td> <%= article.id %> <%#% </td>  %> 
     <td> <%= article.name %> </td>
     <td> <%= article.body %> </td>
     <td>
-        <%= link_to 'Edit', article_edit_path(article.id), class: "btn btn-primary" %>
+        <%= link_to '', article_edit_path(article.id), class: "btn btn-primary fas fa-edit" %>
     </td>
      <td>
-        <%= link_to 'Delete', article_delete_path(article.id),class: "btn btn-danger",
+        <%= link_to '', article_delete_path(article.id),class: "btn btn-danger fas fa-trash-alt",
             method: :Delete, 
             data:{confirm: 'Are you sure to delete?'}
          %>
